tests/macros/local_variable/not_found.rs
fn main() {
    requestty::questions![Input { name }];
}
